--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <div id="state-1" class="state-container">
         <button class="bell-btn" onclick="triggerDoorbell()">🔔</button>
-        <h1 style="color:var(--text-fs); margin-top:20px;">TAP TO START</h1>
+        <h1 style="color:var(--text-fs); margin-top:20px;">CLICK TO START</h1>
     </div>
 
     <div id="state-2" class="state-container">
@@ -284,3 +284,4 @@
 </body>
 
 </html>
+
